(r4949) Enable scrolling with the mouse wheel in the file viewer.
(r4953) Fix a vanilla graphics glitch in the laptop file viewer: The background of the content area was not completely filled.
(r4949) Enable scrolling of the finance log with the mouse wheel.
(r4942) Enable scrolling of the history log with the mouse wheel.
(r4939) Enable scrolling of Bobby Ray's items list with the mouse wheel.
(r4936) Remove the duplicate weight display for weapons and armour from Bobby Ray's.
(r4929) Enable scrolling the dealer inventory with the mouse wheel.
(r4925) Fix a vanilla graphics glitch in the editor: The right and lower border of popup menus was missing.
(r4923) Allow word separation at hyphens when formatting text.
(r4864) Fix a vanilla bug: In an ambush all mercs were moved to the centre of their sectors, even if they were in different sectors than the ambush.
(r4857) Fix a glitch in r4280: The wrong dying sound was played for animals and monsters.
(r4856, r4931, r4934, r4935) Correct vanilla mistranslations and improve German translation.
(r4855) Fix a glitch in r3732, which caused that the last page of the history was missing, if there is a single entry on that page.
(r4849) Fix a vanilla out of bounds array access, when a soldier puts an item in his primary hand, which is not a weapon.  This caused burst mode to be reset, when reloading a gun.
(r4837) Fix a bug in r894, which caused the list of available skills in the IMP character generator to be filtered improperly.
(r4833) Fix a vanilla bug: The helicopter was missing a piece when landed in Estoni.
(r4832) Fix error in r1643, which lead to a null-pointer access in the personnel screen, when there are mercs with some stat values of 0.
(r4831) Fix a vanilla bug in the editor: The Z coordinate of the map was not set for surface maps.
(r4830) Fix a vanilla glitch: Some text in the editor taskbar sometimes got a shadow.